[workspace]
resolver = "2"
members = [
    "crates/reiny-launch",
    "crates/reiny-macros",
    "crates/reiny",
    "crates/reiny-build",
]
# examples/ は到達目標を示す設計サンプル(独立ワークスペース)。まだビルドが通らないので
# ルートのビルド・テストには巻き込まない。
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Protobuf(reiny-build が各 grain の proto をコンパイルするのに使う)
prost = "0.13"
prost-build = "0.13"
# protoc バイナリをクレートとして同梱し、外部インストール不要でビルドできるようにする
protoc-bin-vendored = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# 設定ファイル(launch config の [grain] 節)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# プロセス横断の Ctrl+C ハンドラ
ctrlc = "3"

# Zenoh pub/sub
zenoh = { version = "1.0", default-features = false, features = ["transport_tcp", "transport_udp"] }

# proc-macro 実装(#[reiny::main])
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
