[package]
name = "reiny-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reiny build 補助: Reiny.toml を読み proto をコンパイルして型・トピックを生成する"

[dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
