[package]
name = "reiny-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "reiny build helper: reads Reiny.toml, compiles protos, and generates types and topics"
keywords = ["reiny", "build", "protobuf", "codegen", "prost"]
categories = ["development-tools::build-utils"]

[dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
