[package]
name = "reiny-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "reiny build helper: reads Reiny.toml, compiles protos, and generates types and topics"
keywords = ["reiny", "build", "protobuf", "codegen", "prost"]
categories = ["development-tools::build-utils"]

[features]
# 既定では proto コンパイル機能込み(grain の build.rs はこれを使う)。
# `default-features = false` にすると Reiny.toml の解決・型/トピック導出だけが残り、
# prost-build / protoc を引かない(`reiny check` のような内省用途向け)。
default = ["compile"]
compile = ["dep:prost-build", "dep:protoc-bin-vendored"]

[dependencies]
prost-build = { workspace = true, optional = true }
protoc-bin-vendored = { workspace = true, optional = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
