[package]
name = "reiny-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reiny CLI: grain 雛形生成(new/init/add)・build・run・compress を束ねる `reiny` コマンド"

[[bin]]
name = "reiny"
path = "src/main.rs"

[dependencies]
reiny-launch = { path = "../reiny-launch" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
