[package]
name = "reiny-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "reiny CLI: scaffold grains (new/init/add), build, run, and compress via the `reiny` command"
keywords = ["reiny", "cli", "scaffold", "launcher"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "reiny"
path = "src/main.rs"

[dependencies]
reiny-launch = { path = "../reiny-launch", version = "0.2.0" }
# Reiny.toml の解決・型/トピック導出だけ使う(`reiny check`)。prost-build は引かない。
reiny-build = { path = "../reiny-build", version = "0.2.0", default-features = false }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
