[package]
name = "reiny-launch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reiny launcher: spawn grain processes from a launch config's [grain] section"

[[bin]]
name = "reiny"
path = "src/bin/reiny.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
