[package]
name = "reiny-launch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "reiny launcher: spawn grain processes from a launch config's [grain] section"
keywords = ["reiny", "launcher", "process", "supervisor"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }

[lints]
workspace = true
