[package]
name = "reiny-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reiny の #[reiny::main] proc-macro。reiny クレート経由で使う(直接依存しない)。"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
