[package]
name = "reiny-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "The #[reiny::main] proc-macro for reiny (use via the reiny crate, not directly)"
keywords = ["reiny", "macro", "proc-macro", "pubsub"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
