[package]
name = "reiny-transport"
version.workspace = true
edition.workspace = true

[dependencies]
reiny-proto = { path = "../reiny-proto" }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
zenoh = { workspace = true }
