[package]
name = "reiny"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reiny SDK: 型を渡すだけで pub/sub する Cloudy と #[reiny::main] ランタイム"

[dependencies]
reiny-macros = { path = "../reiny-macros" }
prost = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
