[package]
name = "reiny"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "reiny SDK: publish/subscribe by Rust type via Cloudy and the #[reiny::main] runtime"
keywords = ["zenoh", "pubsub", "distributed", "actor", "grain"]
categories = ["network-programming", "asynchronous"]

[dependencies]
reiny-macros = { path = "../reiny-macros", version = "0.1.0" }
prost = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
