# ping-pong-fanout の cargo ワークスペース(独立ワークスペース)。
# 1 つの ping と、複数インスタンスとして起動する 1 つの pong から成る。
#
# `reiny` / `reiny-build` でそのままビルドできる(`cargo build`)。
[workspace]
resolver = "2"
members = ["ping", "pong"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nop <noplab90@gmail.com>"]

[workspace.dependencies]
reiny = { path = "../../crates/reiny" }
reiny-build = { path = "../../crates/reiny-build" }
# 生成型は prost-derive 由来。利用側 crate に prost が要る(reiny と同一 0.13 で unify)。
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
