# ping-pong-workspace の cargo ワークスペース。
# ping/ と pong/ の 2 プロジェクトを束ねる。reiny 本体のワークスペースとは分離した
# 独立ワークスペースなので、ルートの `cargo build` には巻き込まれない。
#
# 配置パターン: ワークスペース共有。proto と Reiny.toml はワークスペース直下に 1 つだけ
# 置き、members はそれを共有する(per-project 版は ../ping-pong-ring)。
#
# 注意: これは *目標* を示す設計サンプル。現状の reiny クレートだけでは
# まだビルドは通らない(umbrella crate `reiny` / `reiny-build` は将来追加)。
[workspace]
resolver = "2"
members = ["ping", "pong"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nop <noplab90@gmail.com>"]

[workspace.dependencies]
# 将来の umbrella crate: SDK 本体 + #[reiny::main] マクロ + ランタイム。
reiny = "0.1"
# Reiny.toml と proto を読んで型・トピックマッピングを生成する build 補助。
reiny-build = "0.1"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
