# ping-pong-workspace の cargo ワークスペース。
# ping/ と pong/ の 2 プロジェクトを束ねる。reiny 本体のワークスペースとは分離した
# 独立ワークスペースなので、ルートの `cargo build` には巻き込まれない。
#
# 配置パターン: ワークスペース共有。proto と Reiny.toml はワークスペース直下に 1 つだけ
# 置き、members はそれを共有する(per-project 版は ../ping-pong-ring)。
#
# `reiny` / `reiny-build` でそのままビルドできる(`cargo build`)。
[workspace]
resolver = "2"
members = ["ping", "pong"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nop <noplab90@gmail.com>"]

[workspace.dependencies]
# umbrella crate: SDK 本体 + #[reiny::main] マクロ + ランタイム。
reiny = { path = "../../crates/reiny" }
# Reiny.toml と proto を読んで型・トピックマッピングを生成する build 補助。
reiny-build = { path = "../../crates/reiny-build" }
# 生成型は prost-derive 由来。利用側 crate に prost が要る(reiny と同一 0.13 で unify)。
prost = "0.13"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
