[package]
name = "pong"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reiny.workspace = true
# 共有スキーマクレート。型(Ping/Pong)はここから来る。prost は不要(型を使うだけ)。
pingpong-schema.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
# 消費モード(ping と同じ)。proto は再コンパイルしない。
reiny-build.workspace = true
